Fix 0 handling for accuracy. Calendar slightly smaller on mobile.

--- a/math-facts.css
+++ b/math-facts.css
@@ -237,7 +237,7 @@ body {
 .fill-gold { fill: #eecd3f; }
 
 .calendar {
-    font-size: 150%;
+    font-size: 125%;
 }
 
 .calendar th {
